--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js"
+    ,"test-watch" : "nodemon --exec (npm test)"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
+  },
+  "devDependencies": {
+    "expect": "^22.0.3",
+    "mocha": "^4.1.0",
+    "nodemon": "^1.14.7",
+    "supertest": "^3.0.0"
   }
 }
