--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/**/*.test.js"
-    ,"test-watch" : "nodemon --exec (npm test)"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec (npm test)"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +16,9 @@
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
-    "expect": "^22.0.3",
-    "mocha": "^4.1.0",
-    "nodemon": "^1.14.7",
-    "supertest": "^3.0.0"
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
