--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
-    "lodash": "^4.17.4",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.5.9",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
-    "nodemon": "^1.10.2",
+    "nodemon": "^1.14.11",
     "supertest": "^2.0.0"
   }
 }
